--- a/DAD/control_parental/webroot/hola.html
+++ b/DAD/control_parental/webroot/hola.html
@@ -7,6 +7,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
   <script src="/web/js/cargaBD.js"></script>
 
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
   <link rel="stylesheet" href="/web/css/style.css">
 
 </head>
@@ -14,6 +15,12 @@
 <body style="margin: 0%">
    <div class = "page_header">
      <h3>CONTROL PARENTAL</h3>
+   </div>
+
+   <div class = "placas_body">
+
+
+
    </div>
 
 </body>
